# blogs

backend/: db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/blog/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/blog/[id]/: page.tsx
frontend/src/app/blog/create/: page.tsx
frontend/src/app/blog/edit/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: SearchBar.tsx  blog-card-group.tsx  blog-cards-skeleton.tsx  blog-cards.tsx  navbar.tsx
frontend/src/components/auth/: login-form.tsx  register-form.tsx
frontend/src/components/ui/: sheet.tsx
frontend/src/context/: auth-context.tsx
